[package]
name = "webserver"
version = "0.1.0"
authors = ["PELCORP\\X1100543 <jeremy.woowengkeong@countdown.co.nz>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
#hyper = "0.14.7"
hyper =  { version = "0.14.7", features = ["full"] }
tokio =  { version = "1.0.0", features = ["full"] } 
